HelloUltraviolet/Fixtures/RejectedSource/Keys/SpeculativeNestedKeyBlock/Source/Main.uv
//! Rejected key-system specimen for a nested key block inside speculative execution.

public procedure speculativeNestedKeyBlockReference() -> i32 {
    var shared_value: shared i32 = 1
    #shared_value speculative write {
        #shared_value write {
            shared_value = 2
        }
    }
    return 0
}
